2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Added control program glassplayerhost(1) in
	'src/glassplayercontrol/'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added web integration in 'src/web/'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added 'helpers/jsmin.c'.
	* Added a 'make embed' target.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added GlassPlayer to 'glassplayerhost-embed.spec'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make fastembed' target.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
	the 'make fastembed' target on armv5tel.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
	web password database initialization.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
	package of the Java scripts.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Removed the error check for an empty StreamUrl value in
	'src/glassplayerhost/glassplayerhost.cpp'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Updated the webhost version to 0.8.3.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a logo in 'src/web/logo.png'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented firmware updates via the web interface.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed an HTML validation error in 'src/web/systempage.cpp'.
	* Incremented the webhost version to 0.8.4.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.2.