@@ -39,3 +39,5 @@
 	* Incremented the webhost version to 0.8.4.
 2016-01-27 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.5.2.
+2016-01-28 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the GlassPlayer version to 0.6.2.
